增加製作者小卡
Updated sections and added maker profiles with images.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,22 +33,54 @@
         <a href="main.html" class="scroll"><i class='bx  bxs-down-arrow'></i></a> 
     </div>
 
-    <div class="section" id="use">
+    <div class="section2" id="use">
         <h2>How to use</h2>
         <p>如何使用呢?</p>
     </div>
 
-    <div class="section" id="origin">
+    <div class="section2" id="origin">
         <h2>緣起</h2>
         <p>搭車好累</p>
     </div>
 
-    <div class="section" id="maker">
+    <div class="section2" id="maker">
         <h2>製作者</h2>
-        <p>01357119、01357120</p>
+        
+        <div class="maker-wrapper">
+            <div class="maker-container" id="makerContainer">
+                <div class="form-container sign-up">
+                    <div class="profile">
+                        <img src="sacjy.png" alt="">
+                        <h1 style="color: black;">黃俊捷</h1>
+                        <span style="color: black;">管理能不能運作的辣個男人</span>
+                    </div>
+                </div>
+                <div class="form-container sign-in">
+                    <div class="profile">
+                        <img src="IMG_0268.JPG" alt="">
+                        <h1 style="color: black;">王冠閔</h1>
+                        <span style="color: black;">管理好不好看的辣個男人</span>
+                    </div>
+                </div>
+                <div class="toggle-container">
+                    <div class="toggle">
+                        <div class="toggle-panel toggle-left">
+                            <h1>Hello, Friend!</h1>
+                            <p>我的物理老師</p>
+                            <button class="hidden" id="login">&larr;查看左邊的人</button>
+                        </div>
+                        <div class="toggle-panel toggle-right">
+                            <h1>Hello, Friend!</h1>
+                            <p>一生當中最陽光的笑容</p>
+                            <button class="hidden" id="register">查看右邊的人&rarr;</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="section" id="tech">
+    <div class="section2" id="tech">
         <h2>使用技術</h2>
         <p>全都用上了</p>
     </div>
