Comment out picture div in main.html
Comment out the picture div in main.html

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -63,9 +63,9 @@
 
         </div>
 
-        <div class="pic">
+        <!-- <div class="pic">
             <img src="test_map.png">
-        </div>
+        </div> -->
 
         <div class="result" id="result">
             <!-- <table class="result-table">
