新增返回至index

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>查詢頁面</title>
 </head>
 <body>
@@ -87,6 +88,7 @@
             </table> -->
         </div>
     </div>
+    <a href="index.html" class="back"><i class='bx  bx-arrow-out-left-square-half'></i> </a> 
     <script src="main.js"></script>
 </body>
 </html>
