增加簡報連結
Updated content and structure of the index.html file, including navigation links and sections for usage, origin, creators, and technology used.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <a href="#main">主頁</a>
-            <a href="#use">使用特點</a>
+            <a href="#use">簡報</a>
             <a href="#origin">緣起</a>
             <a href="#maker">製作者</a>
             <a href="#tech">使用技術</a>
@@ -33,14 +33,16 @@
         <a href="main.html" class="scroll"><i class='bx  bxs-down-arrow'></i></a> 
     </div>
 
-    <div class="section2" id="use">
-        <h2>How to use</h2>
-        <p>如何使用呢?</p>
+    <div class="section" id="use">
+        <h2>What's special?</h2>
+        <a href="https://docs.google.com/presentation/d/1ti5718SjFTNbghcX36apxh0LVX22wwdAe5XWvWRXiC0/edit?usp=sharing" class="presentation" target="_blank"><i class='bx  bx-file'></i> </a>
     </div>
 
     <div class="section2" id="origin">
         <h2>緣起</h2>
-        <p>搭車好累</p>
+        <p>當我想搭車時，在查詢其他網站的時刻表時，一旦遇到需要轉乘其他線路，就會查無資料，<br>
+            或是花更多時間搜索其他時刻表。<br>
+            而且每當重新開啟之前的時刻表時，資料就又要重新查詢，這讓我們感到十分麻煩。</p>
     </div>
 
     <div class="section2" id="maker">
@@ -66,7 +68,7 @@
                     <div class="toggle">
                         <div class="toggle-panel toggle-left">
                             <h1>Hello, Friend!</h1>
-                            <p>我的物理老師</p>
+                            <p>早安</p>
                             <button class="hidden" id="login">&larr;查看左邊的人</button>
                         </div>
                         <div class="toggle-panel toggle-right">
@@ -80,9 +82,9 @@
         </div>
     </div>
 
-    <div class="section2" id="tech">
+    <div class="section" id="tech">
         <h2>使用技術</h2>
-        <p>全都用上了</p>
+        <p>html, css, javascript, DOMevent, fetch, node.js, express</p>
     </div>
     <script src="index.js"></script>
 </body>
